<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/points_tv_pre_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="18dp"
            android:text="@string/points_you_have" />

        <TextView
            android:id="@+id/points_tv_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/points_value_text_size"
            android:textStyle="bold"
            android:includeFontPadding="false"
            tools:text="1230" />

        <TextView
            android:id="@+id/points_tv_post_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/points_unit"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/points_tv_get_points_header"
            android:textSize="@dimen/header_text_size"
            android:text="@string/points_get_points_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/points_content_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/points_tv_get_points_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/points_content_text_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/points_get_points_content"/>

        <TextView
            android:id="@+id/points_tv_spend_points_header"
            android:textSize="@dimen/header_text_size"
            android:text="@string/points_spend_points_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/points_content_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/points_tv_spend_points_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/points_content_text_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/points_spend_points_content"/>

        <ImageView
            android:id="@+id/points_iv_coming_soon"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/points_content_vertical_margin"
            android:layout_marginBottom="@dimen/points_content_vertical_margin"/>

    </LinearLayout>

</ScrollView>