<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/user_data_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/user_data_container_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:scrollbars="vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/dialog_horizontal_padding"
                android:paddingRight="@dimen/dialog_horizontal_padding"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_data_til_full_name"
                    android:layout_width="match_parent"
                    android:focusable="false"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_data_tie_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:enabled="false"
                        android:inputType=""
                        android:maxLines="1"
                        android:hint="@string/user_data_full_name" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_data_til_email"
                    android:layout_width="match_parent"
                    android:focusable="false"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_data_tie_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:enabled="false"
                        android:inputType=""
                        android:maxLines="1"
                        android:hint="@string/user_data_email" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_data_til_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_data_tie_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorDark"
                        android:maxLines="1"
                        android:inputType="date"
                        android:maxLength="8"
                        android:hint="@string/user_data_birthday" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_data_til_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_data_tie_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorDark"
                        android:maxLines="1"
                        android:inputType="text"
                        android:maxLength="100"
                        android:hint="@string/user_data_address" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_data_til_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_data_tie_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorDark"
                        android:maxLines="1"
                        android:inputType="phone"
                        android:maxLength="20"
                        android:hint="@string/user_data_phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/user_data_tv_change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/edit_text_inner_horizontal_padding"
                    android:paddingRight="@dimen/edit_text_inner_horizontal_padding"
                    android:text="@string/user_data_change_password"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/user_data_btn_save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_bottom_height"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/colorAccent"
            android:textColor="@color/textColorLight"
            android:textStyle="bold"
            android:text="@string/user_data_save"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/user_data_pb_loading"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:visibility="gone"
        android:layout_gravity="center"/>

</FrameLayout>